updated with changes

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -17,24 +17,44 @@
       rel="stylesheet"
     />
   </head>
-  <header class="orange-header">
-    <img
-      src="rainydays-images/RainyDays_Logo.png"
-      alt="RainyDays logo"
-      class="header-logo"
-    />
-    <nav class="main-nav">
-      <a href="index.html"
-        ><img src="rainydays-images/output-onlinepngtools.png"
-      /></a>
-      <a href="coming-soon.html"><i class="fa-thin fa-magnifying-glass"></i></a>
-      <a href="index.html"><i class="fa-thin fa-bars"></i></a>
-      <a href="shopping-cart.html"><i class="fa-thin fa-bag-shopping"></i></a>
+  <header class="nav-header">
+    <nav class="homepage-nav">
+      <ul>
+        <li>
+          <a href="index.html"
+            ><span class="desktop-homepage-nav">Home</span
+            ><i class="fa-thin fa-house nav-icon mobile-icon"></i
+          ></a>
+        </li>
+        <li>
+          <a href="products-page.html">
+            <span class="desktop-homepage-nav">Products</span
+            ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
+          ></a>
+        </li>
+        <li>
+          <a href="shopping-cart.html"
+            ><i class="fa-thin fa-bag-shopping nav-icon"></i
+          ></a>
+        </li>
+        <li>
+          <a href="coming-soon.html"
+            ><i class="fa-thin fa-magnifying-glass nav-icon"></i
+          ></a>
+        </li>
+      </ul>
     </nav>
+    <div class="orange-header">
+      <img
+        src="rainydays-images/RainyDays_Logo.png"
+        alt="RainyDays logo"
+        class="header-logo"
+      />
+    </div>
   </header>
   <body>
     <section>
-      <h1>Coming soon.</h1>
+      <h1 class="coming-soon">Coming soon.</h1>
     </section>
   </body>
   <footer>
