--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -19,19 +19,42 @@
     />
   </head>
   <body>
-    <header class="orange-header">
-      <img
-        src="rainydays-images/RainyDays_Logo.png"
-        alt="RainyDays logo"
-        class="header-logo"
-      />
-      <nav class="main-nav">
-        <a href="index.html"><i class="fa-thin fa-magnifying-glass"></i></a>
-        <a href="index.html"><i class="fa-thin fa-bars"></i></a>
-        <a href="shopping-cart.html"><i class="fa-thin fa-bag-shopping"></i></a>
+    <header class="nav-header">
+      <nav class="homepage-nav">
+        <ul>
+          <li>
+            <a href="index.html"
+              ><span class="desktop-homepage-nav">Home</span
+              ><i class="fa-thin fa-house nav-icon mobile-icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="products-page.html">
+              <span class="desktop-homepage-nav">Products</span
+              ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="shopping-cart.html"
+              ><i class="fa-thin fa-bag-shopping nav-icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="coming-soon.html"
+              ><i class="fa-thin fa-magnifying-glass nav-icon"></i
+            ></a>
+          </li>
+        </ul>
       </nav>
+      <div class="orange-header">
+        <img
+          src="rainydays-images/RainyDays_Logo.png"
+          alt="RainyDays logo"
+          class="header-logo"
+        />
+      </div>
     </header>
-    <main>
+    <main class="thank-you-box">
       <h1>Thank you for your order!</h1>
       <section class="box">
         <div class="information-container">
