--- a/index.html
+++ b/index.html
@@ -26,24 +26,29 @@
       <nav class="homepage-nav">
         <ul>
           <li>
-            <a href="index.html"><i class="fa-thin fa-house"></i></a>
-          </li>
-          <li>
-            <a href="coming-soon.html"
-              ><i class="fa-thin fa-magnifying-glass"></i
+            <a href="index.html"
+              ><span class="desktop-homepage-nav">Home</span
+              ><i class="fa-thin fa-house nav-icon mobile-icon"></i
             ></a>
           </li>
           <li>
-            <a href="coming-soon.html"><i class="fa-thin fa-bars"></i></a>
+            <a href="products-page.html">
+              <span class="desktop-homepage-nav">Products</span
+              ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
+            ></a>
           </li>
           <li>
             <a href="shopping-cart.html"
-              ><i class="fa-thin fa-bag-shopping"></i
+              ><i class="fa-thin fa-bag-shopping nav-icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="coming-soon.html"
+              ><i class="fa-thin fa-magnifying-glass nav-icon"></i
             ></a>
           </li>
         </ul>
       </nav>
-
       <a href="index.html" class="homepage-logo-container"
         ><img
           src="rainydays-images/RainyDays_Logo.png"
@@ -60,22 +65,22 @@
       </section>
 
       <section class="new-collection">
-        <h2>New collection</h2>
+        <h1 class="h1-homepage">New collection</h1>
         <div class="product-container">
-          <div class="product-card">
+          <div class="homepage-product-card">
             <img
               src="rainydays-images/jacket1.jpg"
               alt="red jacket with zipper"
-              class="product-img"
+              class="homepage-product-img"
             />
             <h3>Frost Peak</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card">
+          <div class="homepage-product-card">
             <img
               src="rainydays-images/jacket2.jpg"
               alt="red pufferjacket"
-              class="product-img"
+              class="homepage-product-img"
             />
             <h3>Flex Athletic</h3>
             <button class="add-to-cart-button">Add to cart</button>
@@ -86,20 +91,20 @@
       <section class="bestsellers">
         <h2>Bestsellers</h2>
         <div class="product-container">
-          <div class="product-card">
+          <div class="homepage-product-card">
             <img
               src="rainydays-images/jacket3.jpg"
               alt="long, black rainjacket"
-              class="product-img"
+              class="homepage-product-img"
             />
             <h3>Frost Barrier</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card">
+          <div class="homepage-product-card">
             <img
               src="rainydays-images/jacket4.jpg"
               alt="pink skiingjacket"
-              class="product-img"
+              class="homepage-product-img"
             />
             <h3>Polar Pulse</h3>
             <button class="add-to-cart-button">Add to cart</button>
