--- a/payment-details.html
+++ b/payment-details.html
@@ -22,161 +22,198 @@
     />
   </head>
   <body>
-    <header class="orange-header">
-      <img
-        src="rainydays-images/RainyDays_Logo.png"
-        alt="RainyDays logo"
-        class="header-logo"
-      />
-      <nav class="main-nav">
-        <a href="index.html"><i class="fa-thin fa-magnifying-glass"></i></a>
-        <a href="index.html"><i class="fa-thin fa-bars"></i></a>
-        <a href="shopping-cart.html"><i class="fa-thin fa-bag-shopping"></i></a>
+    <header class="nav-header">
+      <nav class="homepage-nav">
+        <ul>
+          <li>
+            <a href="index.html"
+              ><span class="desktop-homepage-nav">Home</span
+              ><i class="fa-thin fa-house nav-icon mobile-icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="products-page.html">
+              <span class="desktop-homepage-nav">Products</span
+              ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="shopping-cart.html"
+              ><i class="fa-thin fa-bag-shopping nav-icon"></i
+            ></a>
+          </li>
+          <li>
+            <a href="coming-soon.html"
+              ><i class="fa-thin fa-magnifying-glass nav-icon"></i
+            ></a>
+          </li>
+        </ul>
       </nav>
+      <div class="orange-header">
+        <img
+          src="rainydays-images/RainyDays_Logo.png"
+          alt="RainyDays logo"
+          class="header-logo"
+        />
+      </div>
     </header>
     <main>
       <h1>Checkout</h1>
-      <section>
-        <h2>Payment details</h2>
-        <form class="form-container">
-          <section class="form-group-payment">
-            <div class="input-group">
-              <label for="name">First name</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-group">
-              <label for="name">Last name</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-group">
-              <label for="phone">Card number</label>
-              <input
-                type="tel"
-                name="phone"
-                id="phone"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-card-details">
-              <div class="input-group">
-                <label for="email">Expiration date</label>
-                <input
-                  type="date"
-                  name="email"
-                  id="email"
-                  class="form-input"
-                  required
-                />
-              </div>
-              <div class="input-group">
-                <label for="email">CVC</label>
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  class="form-input"
-                  required
-                />
-              </div>
-            </div>
-          </section>
+      <div class="payment-details-main">
+        <section>
+          <div class="payment-details-container">
+            <h2>Payment details</h2>
+            <form>
+              <section class="form-group-payment">
+                <div class="input-group">
+                  <label for="name">First name</label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-group">
+                  <label for="name">Last name</label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-group">
+                  <label for="phone">Card number</label>
+                  <input
+                    type="tel"
+                    name="phone"
+                    id="phone"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-card-details">
+                  <div class="input-group">
+                    <label for="email">Expiration date</label>
+                    <input
+                      type="date"
+                      name="email"
+                      id="email"
+                      class="form-input"
+                      required
+                    />
+                  </div>
+                  <div class="input-group">
+                    <label for="email">CVC</label>
+                    <input
+                      type="email"
+                      name="email"
+                      id="email"
+                      class="form-input"
+                      required
+                    />
+                  </div>
+                </div>
+              </section>
+            </form>
+          </div>
+          <div class="delivery-address-container">
+            <h2>Delivery address</h2>
+            <form>
+              <section class="form-group-delivery">
+                <div class="input-group delivery-first-name">
+                  <label for="name">First name</label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-group delivery-last-name">
+                  <label for="name">Last name</label>
+                  <input
+                    type="text"
+                    name="name"
+                    id="name"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-group delivery-email">
+                  <label for="email">Email address</label>
+                  <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-group delivery-phone">
+                  <label for="phone">Phone number</label>
+                  <input
+                    type="tel"
+                    name="phone"
+                    id="phone"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-group delivery-address">
+                  <label for="address">Address</label>
+                  <input
+                    type="text"
+                    name="email"
+                    id="address"
+                    class="form-input"
+                    required
+                  />
+                </div>
+                <div class="input-group delivery-postal">
+                  <label for="zipcode">Postal code</label>
+                  <input
+                    type="text"
+                    name="zipcode"
+                    id="zipcode"
+                    class="form-input"
+                    required
+                  />
+                </div>
+              </section>
+            </form>
+          </div>
+        </section>
 
-          <legend>Delivery address</legend>
-          <section class="form-group-delivery">
-            <div class="input-group delivery-first-name">
-              <label for="name">First name</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-group delivery-last-name">
-              <label for="name">Last name</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-group delivery-email">
-              <label for="email">Email address</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-group delivery-phone">
-              <label for="phone">Phone number</label>
-              <input
-                type="tel"
-                name="phone"
-                id="phone"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-group delivery-address">
-              <label for="address">Address</label>
-              <input
-                type="text"
-                name="email"
-                id="address"
-                class="form-input"
-                required
-              />
-            </div>
-            <div class="input-group delivery-postal">
-              <label for="zipcode">Postal code</label>
-              <input
-                type="text"
-                name="zipcode"
-                id="zipcode"
-                class="form-input"
-                required
-              />
-            </div>
-          </section>
-        </form>
-      </section>
-      <section>
-        <h2>Order summary</h2>
-        <p>1 items in cart</p>
+        <section class="right.checkout">
+          <h2>Order summary</h2>
+          <div class="order-summary-content">
+            <p>1 items in cart</p>
 
-        <img src="rainydays-images/jacket1.jpg" alt="red jacket with zipper" />
-        <p>Frost Peak</p>
-        <p>42</p>
-        <p>Qty: 1</p>
-        <p>1500 nok</p>
-        <div>
-          <p>Shipping</p>
-          <p>0 nok</p>
-        </div>
-        <div>
-          <p>Total</p>
-          <p>1500 nok</p>
-        </div>
-      </section>
+            <img
+              src="rainydays-images/jacket1.jpg"
+              alt="red jacket with zipper"
+              class="payment-details-img"
+            />
+            <p>Frost Peak</p>
+            <p>42</p>
+            <p>Qty: 1</p>
+            <p>1500 nok</p>
+            <div>
+              <p>Shipping</p>
+              <p>0 nok</p>
+            </div>
+            <div>
+              <p>Total</p>
+              <p>1500 nok</p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
   </body>
   <footer>
