changes for mobile view

--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -67,9 +67,27 @@
         </div>
         <div class="summary-container">
           <h2>Order summary</h2>
-          <p>items in cart</p>
-          <p>Shipping</p>
-          <p>Total</p>
+          <div class="order-products">
+            <img
+              src="rainydays-images/jacket1.jpg"
+              alt="red jacket with zipper"
+              class="order-product-img"
+            />
+            <div class="order-name-size-qty">
+              <p>Frost Peak</p>
+              <p>42</p>
+              <p>- 1 +</p>
+            </div>
+            <p class="order-product-price">1500 nok</p>
+          </div>
+          <div class="confirmation-shipping-box">
+            <p>Shipping</p>
+            <p>0 nok</p>
+          </div>
+          <div class="confirmation-total-box">
+            <p>Total</p>
+            <p>1500 nok</p>
+          </div>
         </div>
       </section>
     </main>
