--- a/frost-peak-details.html
+++ b/frost-peak-details.html
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main>
-      <div class="main-boxes">
+      <div class="main-box">
         <img
           src="rainydays-images/jacket1.jpg"
           alt="red jacket with zipper"
@@ -78,14 +78,14 @@
           <button class="add-to-cart-button">Add to cart</button>
           <h3>Description:</h3>
           <p>
-            This sporty fleece jacket offers warmth, breathability, and
-            flexibility for active wear. Made from moisture-wicking fleece, it
-            keeps you dry and comfortable during workouts or outdoor activities.
-            The full-zip design allows for easy ventilation, while the ergonomic
-            fit ensures freedom of movement. Featuring zippered pockets for
-            secure storage and a sleek, athletic style, this jacket is perfect
-            for staying active or layering up for a casual look. Ideal for any
-            sport or outdoor adventure.
+            This sporty puffer jacket offers warmth, breathability, and
+            flexibility for active wear. Made from good quality down, it keeps
+            you dry and comfortable during workouts or outdoor activities. The
+            full-zip design allows for easy ventilation, while the ergonomic fit
+            ensures freedom of movement. Featuring zippered pockets for secure
+            storage and a sleek, athletic style, this jacket is perfect for
+            staying active or layering up for a casual look. Ideal for any sport
+            or outdoor adventure.
           </p>
         </div>
       </div>
