--- a/products-page.html
+++ b/products-page.html
@@ -58,7 +58,7 @@
   </header>
   <body>
     <main>
-      <h1>Products</h1>
+      <h1 class="h1-products-page">Products</h1>
       <section>
         <ul class="categories-list">
           <li class="category all-items">All items</li>
@@ -69,7 +69,7 @@
       </section>
       <section>
         <section class="products">
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket1.jpg"
               alt="red jacket with zipper"
@@ -78,7 +78,7 @@
             <h3>Frost Peak</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket2.jpg"
               alt="red pufferjacket"
@@ -87,7 +87,7 @@
             <h3>Storm Flex Athletic</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket3.jpg"
               alt="long, black rainjacket"
@@ -96,7 +96,7 @@
             <h3>Frost Barrier</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket4.jpg"
               alt="pink skiingjacket"
@@ -105,7 +105,7 @@
             <h3>Polar Pulse</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket5.jpg"
               alt="red and black skiingjacket"
@@ -114,7 +114,7 @@
             <h3>Frost Peak</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket6.jpg"
               alt="teal softshelljacket"
@@ -123,7 +123,7 @@
             <h3>Storm Flex Athletic</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket7.jpg"
               alt="red softshelljacket"
@@ -132,7 +132,7 @@
             <h3>Frost Barrier</h3>
             <button class="add-to-cart-button">Add to cart</button>
           </div>
-          <div class="product-card mobile-product-card">
+          <div class="product-card">
             <img
               src="rainydays-images/jacket8.jpg"
               alt="green goretexjacket"
