--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -63,23 +63,24 @@
           alt="red jacket with zipper"
           class="checkout-product-img"
         />
-        <p class="product-name">Frost Peak</p>
-        <p class="product-size">42</p>
-        <p class="qty">- 1 +</p>
+        <div class="product-name-size-qty">
+          <p>Frost Peak</p>
+          <p>42</p>
+          <p>- 1 +</p>
+        </div>
         <p class="product-price">1500 nok</p>
       </div>
-        <div class="shipping-box">
-          <p class="shipping">Shipping</p>
-          <p class="shipping-price">0 nok</p>
-        </div>
-        <div class="total-box">
-          <p class="total">Total</p>
-          <p class="total-price">1500 nok</p>
-        </div>
+      <div class="shipping-box">
+        <p>Shipping</p>
+        <p>0 nok</p>
+      </div>
+      <div class="total-box">
+        <p>Total</p>
+        <p>1500 nok</p>
       </div>
 
       <div class="checkout-continue">
-        <a href="payment-details.html" class="checkout">Checkout</a>
+        <a href="payment-details.html" class="pay-now">Pay now</a>
         <a href="products-page.html" class="continue">Continue shopping</a>
       </div>
     </main>
