--- a/frost-peak-details.html
+++ b/frost-peak-details.html
@@ -75,7 +75,9 @@
             <div class="size"><p>44</p></div>
             <div class="size"><p>46</p></div>
           </div>
-          <button class="add-to-cart-button">Add to cart</button>
+          <a href="shopping-cart.html" class="add-to-cart-button"
+            >Add to cart</a
+          >
           <h3>Description:</h3>
           <p>
             This sporty puffer jacket offers warmth, breathability, and
