--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section class="sale-container">
         <div class="valentinesday-sale">
           <p class="text-sale">25% off on our Valentines day sale</p>
-          <button class="sale-button">Go to sale</button>
+          <a href="coming-soon.html" class="sale-button">Go to sale</a>
         </div>
       </section>
 
@@ -74,7 +74,9 @@
               class="homepage-product-img"
             />
             <h3>Frost Peak</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="frost-peak-details.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="homepage-product-card">
             <img
@@ -83,7 +85,9 @@
               class="homepage-product-img"
             />
             <h3>Flex Athletic</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
         </div>
       </section>
@@ -98,7 +102,9 @@
               class="homepage-product-img"
             />
             <h3>Frost Barrier</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="homepage-product-card">
             <img
@@ -107,7 +113,9 @@
               class="homepage-product-img"
             />
             <h3>Polar Pulse</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
         </div>
       </section>
