--- a/products-page.html
+++ b/products-page.html
@@ -61,10 +61,12 @@
       <h1 class="h1-products-page">Products</h1>
       <section>
         <ul class="categories-list">
-          <li class="category all-items">All items</li>
-          <li class="category">Women</li>
-          <li class="category">Men</li>
-          <li class="category sale">Sale</li>
+          <li class="category all-items">
+            <a href="products-page.html">All items</a>
+          </li>
+          <li class="category"><a href="coming-soon.html">Women</a></li>
+          <li class="category"><a href="coming-soon.html">Men</a></li>
+          <li class="sale"><a href="coming-soon.html">Sale</a></li>
         </ul>
       </section>
       <section>
@@ -76,7 +78,9 @@
               class="product-img"
             />
             <h3>Frost Peak</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="shopping-cart.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="product-card">
             <img
@@ -85,7 +89,9 @@
               class="product-img"
             />
             <h3>Storm Flex Athletic</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="product-card">
             <img
@@ -94,7 +100,9 @@
               class="product-img"
             />
             <h3>Frost Barrier</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="product-card">
             <img
@@ -103,7 +111,9 @@
               class="product-img"
             />
             <h3>Polar Pulse</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="product-card">
             <img
@@ -112,7 +122,9 @@
               class="product-img"
             />
             <h3>Frost Peak</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="product-card">
             <img
@@ -121,7 +133,9 @@
               class="product-img"
             />
             <h3>Storm Flex Athletic</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="product-card">
             <img
@@ -130,7 +144,9 @@
               class="product-img"
             />
             <h3>Frost Barrier</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
           <div class="product-card">
             <img
@@ -139,7 +155,9 @@
               class="product-img"
             />
             <h3>Polar Pulse</h3>
-            <button class="add-to-cart-button">Add to cart</button>
+            <a href="coming-soon.html" class="add-to-cart-button"
+              >Add to cart</a
+            >
           </div>
         </section>
       </section>
