commit with changes after WAVE test

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <p class="subscribtion-text">
             Subscribe to our newsletter to get 10% on your first order
           </p>
-          <label></label>
+          <label for="email" class="label-email">email</label>
           <input type="email" name="email" id="email" placeholder="E-mail" />
           <button class="submit-button">Submit</button>
         </form>
