--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -60,8 +60,8 @@
         <div class="information-container">
           <h2>Order information</h2>
           <p>Order number: 56-322-45</p>
-          <p>Order total:</p>
-          <p>Expected delivery date: 02.20.25</p>
+          <p>Order total: 1500 nok</p>
+          <p>Expected delivery date: 04.05.25</p>
           <p>Order confirmation and receipt will be sent to your email.</p>
           <p>Welcome back next time!</p>
         </div>
@@ -76,7 +76,6 @@
             <div class="order-name-size-qty">
               <p>Frost Peak</p>
               <p>42</p>
-              <p>- 1 +</p>
             </div>
             <p class="order-product-price">1500 nok</p>
           </div>
