fixed link from products-page to frost-peak-details

--- a/products-page.html
+++ b/products-page.html
@@ -78,7 +78,7 @@
               class="product-img"
             />
             <h3>Frost Peak</h3>
-            <a href="shopping-cart.html" class="add-to-cart-button"
+            <a href="frost-peak-details.html" class="add-to-cart-button"
               >Add to cart</a
             >
           </div>
