update fixed problems

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -17,16 +17,16 @@
       rel="stylesheet"
     />
   </head>
-  <header class="nav-header">
+  <header>
     <nav class="homepage-nav">
       <ul>
-        <li>
+        <li class="nav-list-item">
           <a href="index.html"
             ><span class="desktop-homepage-nav">Home</span
             ><i class="fa-thin fa-house nav-icon mobile-icon"></i
           ></a>
         </li>
-        <li>
+        <li class="nav-list-item">
           <a href="products-page.html">
             <span class="desktop-homepage-nav">Products</span
             ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
