--- a/confirmation-page.html
+++ b/confirmation-page.html
@@ -19,16 +19,16 @@
     />
   </head>
   <body>
-    <header class="nav-header">
+    <header>
       <nav class="homepage-nav">
         <ul>
-          <li>
+          <li class="nav-list-item">
             <a href="index.html"
               ><span class="desktop-homepage-nav">Home</span
               ><i class="fa-thin fa-house nav-icon mobile-icon"></i
             ></a>
           </li>
-          <li>
+          <li class="nav-list-item">
             <a href="products-page.html">
               <span class="desktop-homepage-nav">Products</span
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
@@ -67,23 +67,24 @@
         </div>
         <div class="summary-container">
           <h2>Order summary</h2>
-          <div class="order-products">
+          <div class="in-cart">
             <img
               src="rainydays-images/jacket1.jpg"
               alt="red jacket with zipper"
-              class="order-product-img"
+              class="checkout-product-img"
             />
-            <div class="order-name-size-qty">
+            <div class="product-name-size-qty">
               <p>Frost Peak</p>
-              <p>42</p>
+              <p>Size: 42</p>
+              <p>Qty: 1</p>
             </div>
-            <p class="order-product-price">1500 nok</p>
+            <p class="product-price">1500 nok</p>
           </div>
-          <div class="confirmation-shipping-box">
+          <div class="summary-detail-box">
             <p>Shipping</p>
             <p>0 nok</p>
           </div>
-          <div class="confirmation-total-box">
+          <div class="summary-detail-box">
             <p>Total</p>
             <p>1500 nok</p>
           </div>
