--- a/frost-peak-details.html
+++ b/frost-peak-details.html
@@ -22,16 +22,16 @@
     />
   </head>
   <body>
-    <header class="nav-header">
+    <header>
       <nav class="homepage-nav">
         <ul>
-          <li>
+          <li class="nav-list-item">
             <a href="index.html"
               ><span class="desktop-homepage-nav">Home</span
               ><i class="fa-thin fa-house nav-icon mobile-icon"></i
             ></a>
           </li>
-          <li>
+          <li class="nav-list-item">
             <a href="products-page.html">
               <span class="desktop-homepage-nav">Products</span
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
@@ -75,7 +75,7 @@
             <div class="size"><p>44</p></div>
             <div class="size"><p>46</p></div>
           </div>
-          <a href="shopping-cart.html" class="add-to-cart-button"
+          <a href="shopping-cart.html" class="add-to-cart-button cta"
             >Add to cart</a
           >
           <h3>Description:</h3>
