--- a/payment-details.html
+++ b/payment-details.html
@@ -22,16 +22,16 @@
     />
   </head>
   <body>
-    <header class="nav-header">
+    <header>
       <nav class="homepage-nav">
         <ul>
-          <li>
+          <li class="nav-list-item">
             <a href="index.html"
               ><span class="desktop-homepage-nav">Home</span
               ><i class="fa-thin fa-house nav-icon mobile-icon"></i
             ></a>
           </li>
-          <li>
+          <li class="nav-list-item">
             <a href="products-page.html">
               <span class="desktop-homepage-nav">Products</span
               ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
@@ -76,42 +76,45 @@
                   />
                 </div>
                 <div class="input-group">
-                  <label for="name">Last name</label>
+                  <label for="last-name">Last name</label>
                   <input
                     type="text"
                     name="name"
-                    id="name"
+                    id="last-name"
                     class="form-input"
                     required
                   />
                 </div>
                 <div class="input-group">
-                  <label for="phone">Card number</label>
+                  <label for="card-number">Card number</label>
                   <input
-                    type="tel"
-                    name="phone"
-                    id="phone"
+                    type="text"
+                    inputmode="numeric"
+                    name="card-number"
+                    id="card-number"
                     class="form-input"
                     required
                   />
                 </div>
                 <div class="input-card-details">
                   <div class="input-group">
-                    <label for="email">Expiration date</label>
+                    <label for="exp-date">Expiration date</label>
                     <input
-                      type="date"
-                      name="email"
-                      id="email"
+                      type="text"
+                      inputmode="numeric"
+                      name="exp-date"
+                      id="exp-date"
                       class="form-input"
                       required
                     />
                   </div>
                   <div class="input-group">
-                    <label for="email">CVC</label>
+                    <label for="cvc">CVC</label>
                     <input
-                      type="email"
-                      name="email"
-                      id="email"
+                      type="text"
+                      inputmode="numeric"
+                      name="cvc"
+                      id="cvc"
                       class="form-input"
                       required
                     />
@@ -168,7 +171,7 @@
                   <label for="address">Address</label>
                   <input
                     type="text"
-                    name="email"
+                    name="address"
                     id="address"
                     class="form-input"
                     required
@@ -178,12 +181,14 @@
                   <label for="zipcode">Postal code</label>
                   <input
                     type="text"
+                    inputmode="numeric"
                     name="zipcode"
                     id="zipcode"
                     class="form-input"
                     required
                   />
                 </div>
+
                 <div class="payment-solutions">
                   <img
                     src="rainydays-images/PayQuick logo.png"
@@ -194,34 +199,36 @@
                     alt="YippiPay payment solution"
                   />
                 </div>
-                <a href="confirmation-page.html" class="checkout">Checkout</a>
+                <a href="confirmation-page.html" class="checkout-button cta"
+                  >Checkout</a
+                >
               </section>
             </form>
           </div>
         </section>
 
-        <section class="right.checkout">
+        <section>
           <h2>Order summary</h2>
           <div class="summary-container">
-            <p class="summary-item-number">1 items in cart</p>
-            <div class="order-summary-content">
+            <p class="item-number">1 items in cart</p>
+            <div class="in-cart">
               <img
                 src="rainydays-images/jacket1.jpg"
                 alt="red jacket with zipper"
-                class="payment-details-img"
+                class="checkout-product-img"
               />
-              <div class="summary-name-size-qty">
+              <div class="product-name-size-qty">
                 <p>Frost Peak</p>
-                <p>42</p>
+                <p>Size: 42</p>
                 <p>Qty: 1</p>
               </div>
-              <p class="summary-product-price">1500 nok</p>
+              <p class="product-price">1500 nok</p>
             </div>
-            <div class="summary-shipping-box">
+            <div class="summary-detail-box">
               <p>Shipping</p>
               <p>0 nok</p>
             </div>
-            <div class="summary-total-box">
+            <div class="summary-detail-box">
               <p>Total</p>
               <p>1500 nok</p>
             </div>
