--- a/products-page.html
+++ b/products-page.html
@@ -21,16 +21,16 @@
       rel="stylesheet"
     />
   </head>
-  <header class="nav-header">
+  <header>
     <nav class="homepage-nav">
       <ul>
-        <li>
+        <li class="nav-list-item">
           <a href="index.html"
             ><span class="desktop-homepage-nav">Home</span
             ><i class="fa-thin fa-house nav-icon mobile-icon"></i
           ></a>
         </li>
-        <li>
+        <li class="nav-list-item">
           <a href="products-page.html">
             <span class="desktop-homepage-nav">Products</span
             ><i class="fa-thin fa-clothes-hanger nav-icon mobile-icon"></i
@@ -78,7 +78,7 @@
               class="product-img"
             />
             <h3>Frost Peak</h3>
-            <a href="frost-peak-details.html" class="add-to-cart-button"
+            <a href="frost-peak-details.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -89,7 +89,7 @@
               class="product-img"
             />
             <h3>Storm Flex Athletic</h3>
-            <a href="coming-soon.html" class="add-to-cart-button"
+            <a href="coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -100,7 +100,7 @@
               class="product-img"
             />
             <h3>Frost Barrier</h3>
-            <a href="coming-soon.html" class="add-to-cart-button"
+            <a href="coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -111,7 +111,7 @@
               class="product-img"
             />
             <h3>Polar Pulse</h3>
-            <a href="coming-soon.html" class="add-to-cart-button"
+            <a href="coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -122,7 +122,7 @@
               class="product-img"
             />
             <h3>Frost Peak</h3>
-            <a href="coming-soon.html" class="add-to-cart-button"
+            <a href="coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -133,7 +133,7 @@
               class="product-img"
             />
             <h3>Storm Flex Athletic</h3>
-            <a href="coming-soon.html" class="add-to-cart-button"
+            <a href="coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -144,7 +144,7 @@
               class="product-img"
             />
             <h3>Frost Barrier</h3>
-            <a href="coming-soon.html" class="add-to-cart-button"
+            <a href="coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
@@ -155,7 +155,7 @@
               class="product-img"
             />
             <h3>Polar Pulse</h3>
-            <a href="coming-soon.html" class="add-to-cart-button"
+            <a href="coming-soon.html" class="add-to-cart-button cta"
               >Add to cart</a
             >
           </div>
