fixes on layout

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -53,9 +53,11 @@
     </div>
   </header>
   <body>
-    <section>
-      <h1 class="coming-soon">Coming soon.</h1>
-    </section>
+    <main>
+      <section>
+        <h1 class="coming-soon">Coming soon.</h1>
+      </section>
+    </main>
   </body>
   <footer>
     <p>About us | Contact us | Return policy | FAQ</p>
