--- a/payment-details.html
+++ b/payment-details.html
@@ -60,8 +60,8 @@
     <main class="payment-main">
       <h1>Checkout</h1>
       <div class="payment-details-content">
-        <section>
-          <div class="payment-details-container">
+        <section class="payment-details-form-container">
+          <div>
             <h2>Payment details</h2>
             <form>
               <section class="form-group-payment">
