--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -54,34 +54,36 @@
         />
       </div>
     </header>
-    <main class="shopping-cart-container summary-container">
-      <h1>Shopping cart</h1>
-      <p class="item-number">1 items in cart</p>
-      <div class="in-cart">
-        <img
-          src="rainydays-images/jacket1.jpg"
-          alt="red jacket with zipper"
-          class="checkout-product-img"
-        />
-        <div class="product-name-size-qty">
-          <p>Frost Peak</p>
-          <p>Size: 42</p>
-          <p>Qty: 1</p>
+    <main>
+      <div class="shopping-cart-container summary-container">
+        <h1>Shopping cart</h1>
+        <p class="item-number">1 items in cart</p>
+        <div class="in-cart">
+          <img
+            src="rainydays-images/jacket1.jpg"
+            alt="red jacket with zipper"
+            class="checkout-product-img"
+          />
+          <div class="product-name-size-qty">
+            <p>Frost Peak</p>
+            <p>Size: 42</p>
+            <p>Qty: 1</p>
+          </div>
+          <p class="product-price">1500 nok</p>
         </div>
-        <p class="product-price">1500 nok</p>
-      </div>
-      <div class="summary-detail-box">
-        <p>Shipping</p>
-        <p>0 nok</p>
-      </div>
-      <div class="summary-detail-box">
-        <p>Total</p>
-        <p>1500 nok</p>
-      </div>
+        <div class="summary-detail-box">
+          <p>Shipping</p>
+          <p>0 nok</p>
+        </div>
+        <div class="summary-detail-box">
+          <p>Total</p>
+          <p>1500 nok</p>
+        </div>
 
-      <div class="checkout-continue">
-        <a href="payment-details.html" class="pay-now-button cta">Pay now</a>
-        <a href="products-page.html" class="continue">Continue shopping</a>
+        <div class="checkout-continue">
+          <a href="payment-details.html" class="pay-now-button cta">Pay now</a>
+          <a href="products-page.html" class="continue">Continue shopping</a>
+        </div>
       </div>
     </main>
   </body>
